--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "nodegamebox",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["Matching Game", "Memory Matching"],
   "author": "Matthew Carillo",
   "contributors": [
     {
