--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
-  "keywords": ["Matching Game", "Memory Matching"],
+  "keywords": [
+    "Matching Game",
+    "Memory Matching"
+  ],
   "author": "Matthew Carillo",
   "contributors": [
     {
@@ -15,8 +18,11 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.1",
+    "morgan": "^1.10.0",
     "node": "^20.7.0",
     "nodemon": "^3.0.1"
   }
