connected the database

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-# MONGO_URI = connectionstring/Users
+MONGO_URI = mongodb+srv://dummyUser:Bg5Fmc0nCsR4YM7t@georgiecluster.qjq92r5.mongodb.net/MemoryUsers
