--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
-    "mongoose": "^7.6.1",
+    "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
-    "node": "^20.7.0",
+    "node": "^20.8.1",
     "nodemon": "^3.0.1",
+    "npm": "^10.2.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
